--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -153,7 +153,7 @@
       <td>{{c.Transformer}}</td>
       <td class="text-center">{{c.ColumnCreationOptions}}</td>
       <td class="text-center">{{c.SupportingColumns}}</td>
-      <td class="text-center" ng-if="globalIsEditable && schemaIsEdtiable">
+      <td class="text-center" ng-if="globalIsEditable && schemaIsEditable">
         <button
           ng-if="!columnAlreadyStagedForDelete($index) && columnIsDeletable($index) && !outboundColumnEdited(c.OutboundName)"
           ng-click="deleteColumnFromSchema($index)"
