fix typo to show added columns in UI

--- a/static/template/schema/show.html
+++ b/static/template/schema/show.html
@@ -171,7 +171,7 @@
         class="btn btn-info">Undo Rename</button>
       </td>
     </tr>
-    <tr ng-repeat="c in additions.Columns" ng-if="schemaIsEdtiable && globalIsEditable">
+    <tr ng-repeat="c in additions.Columns" ng-if="schemaIsEditable && globalIsEditable">
       <td>{{c.InboundName}}</td>
       <td>{{c.OutboundName}}</td>
       <td>{{c.Transformer}}</td>
